updates parent string

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="">
 
-  <iframe src="https://player.twitch.tv/?video=804190436&parent=http://3.86.58.157&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+  <iframe src="https://player.twitch.tv/?video=804190436&parent=http://ec2-3-86-58-157.compute-1.amazonaws.com:3000&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
   </div>
 
   <div class="">
