adds more options to parent array

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         height: 480,
         channel: "rpascareaz",
         // only needed if your site is also embedded on embed.example.com and othersite.example.com
-        parent: ["http://ec2-3-86-58-157.compute-1.amazonaws.com", "http://ec2-3-86-58-157.compute-1.amazonaws.com:3000", "ec2-3-86-58-157.compute-1.amazonaws.com:3000","http://3.86.58.157:3000/","3.86.58.157:3000/","localhost"]
+        parent: ["http://ec2-3-86-58-157.compute-1.amazonaws.com", "http://ec2-3-86-58-157.compute-1.amazonaws.com:3000", "ec2-3-86-58-157.compute-1.amazonaws.com:3000","http://3.86.58.157:3000/","3.86.58.157:3000/","localhost","ec2-3-86-58-157.compute-1.amazonaws.com","3.86.58.157"]
       });
     </script>
   </div>
