--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         height: 480,
         channel: "rpascareaz",
         // only needed if your site is also embedded on embed.example.com and othersite.example.com
-        parent: ["http://ec2-3-86-58-157.compute-1.amazonaws.com", "http://ec2-3-86-58-157.compute-1.amazonaws.com:3000", "ec2-3-86-58-157.compute-1.amazonaws.com:3000","http://3.86.58.157:3000/","3.86.58.157:3000/","localhost","ec2-3-86-58-157.compute-1.amazonaws.com","3.86.58.157"]
+        parent: ["http://ec2-3-86-58-157.compute-1.amazonaws.com", "http://ec2-3-86-58-157.compute-1.amazonaws.com:3000", "ec2-3-86-58-157.compute-1.amazonaws.com:3000","http://3.86.58.157:3000/","3.86.58.157:3000/","localhost","ec2-3-86-58-157.compute-1.amazonaws.com","3.86.58.157","localhost:3000"]
       });
     </script>
   </div>
@@ -45,7 +45,7 @@
     <br></br>
 
     <video controls>
-      <source src="http://d2ir3gcqzh1pjc.cloudfront.net/test.MOV" type="video/webm" media="all and (max-width:500px)">
+      <source src="http://d2ir3gcqzh1pjc.cloudfront.net/My+Movie.mov" type="video/webm" media="all and (max-width:500px)">
       <source src="myVideo.webm" type="video/webm">
    </video>
   </div>
