added mobile cloudfront

--- a/public/index.html
+++ b/public/index.html
@@ -26,29 +26,39 @@
         height: 480,
         channel: "rpascareaz",
         // only needed if your site is also embedded on embed.example.com and othersite.example.com
-        parent: ["http://ec2-3-86-58-157.compute-1.amazonaws.com", "http://ec2-3-86-58-157.compute-1.amazonaws.com:3000", "ec2-3-86-58-157.compute-1.amazonaws.com:3000","http://3.86.58.157:3000/","3.86.58.157:3000/","localhost","ec2-3-86-58-157.compute-1.amazonaws.com","3.86.58.157","localhost:3000"]
+        parent: ["embed.example.com", "othersite.example.com"]
       });
     </script>
   </div>
+
   <div class="">
 
-  <iframe src="https://player.twitch.tv/?video=804190436&parent&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+  <iframe src="https://player.twitch.tv/?video=804190436&parent=localhost&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
   </div>
 
   <div class="">
-      <h1 style="color:white";>AnyCompany Test3 4K</h1>
-    <!-- <video width="1920" height="1080" controls>
-      <source src="http://d2ir3gcqzh1pjc.cloudfront.net/test.MOV" type="video/mp4">
-      <source src="movie.ogg" type="video/ogg">
-      Your browser does not support the video tag.
-    </video> -->
+    <div class="" style="color:white";>
+      <a href="https://youtu.be/ZCsbC8r4cHA"> Verify 4k</a>
+        <h1 style="color:white";>AnyCompany Test3 4K PC</h1>
+
+    </div>
+
+
     <br></br>
 
-    <video controls>
+    <video width="960" height="540" controls>
       <source src="http://d2ir3gcqzh1pjc.cloudfront.net/My+Movie.mov" type="video/webm" media="all and (max-width:500px)">
-      <source src="myVideo.webm" type="video/webm">
-   </video>
+      <!-- <source src="myVideo.webm" type="video/webm"> -->
+   </video> <br>
+   <p>
+     <h1 style="color:white";>AnyCompany Test3 4K MOBILE</h1>
+   </p>
+   <video width="960" height="540" controls>
+     <source src="http://d2ir3gcqzh1pjc.cloudfront.net/Orgtest.MP4" type="video/webm" media="all and (max-width:500px)">
+     <!-- <source src="myVideo.webm" type="video/webm"> -->
+  </video>
   </div>
+
 
 </body>
 
