chnage video type mobile

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
      <h1 style="color:white";>AnyCompany Test3 4K MOBILE</h1>
    </p>
    <video width="960" height="540" controls>
-     <source src="http://d2ir3gcqzh1pjc.cloudfront.net/Orgtest.MP4" type="video/webm" media="all and (max-width:500px)">
+     <source src="http://d2ir3gcqzh1pjc.cloudfront.net/Orgtest.MP4" type="video/mp4" media="all and (max-width:500px)">
      <!-- <source src="myVideo.webm" type="video/webm"> -->
   </video>
   </div>
